--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,15 @@
   list-style: none;
   margin-left: auto;
   margin-right: auto;
+  border: 5px dashed rgb(63, 124, 220);
 }
 
 .gallery__item {
   position: relative;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-}
+  0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  
+  }
 
 .gallery__image:hover {
   transform: scale(1.03);
@@ -31,12 +33,14 @@
   width: 100%;
   object-fit: cover;
   transition: transform var(--animation-duration) var(--timing-function);
+  
 }
 
-.gallery__link {
+a.gallery__link {
   display: block;
   text-decoration: none;
   height: 100%;
+  border: 3px dashed rgb(214, 168, 53);
 }
 
 .gallery__link:hover {
